live test fixed docs updated